--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <title>
         Salando - Your favorite shop!
     </title>
@@ -46,7 +47,8 @@
             cursor: pointer;
             }
             .form button:hover,.form button:active,.form button:focus {
-            background: #E9967A;
+                background:linear-gradient(to bottom, #493933 5%, #493933 100%);
+	            background-color:#493933;
             }
             .form .message {
             margin: 15px 0 0;
@@ -104,43 +106,44 @@
             -moz-osx-font-smoothing: grayscale;      
             }
     </style>
-
     <body>
         <div class="login-page">
             <div class="form">
             <form class="login-form">
                 <input type="mail" id="mail" placeholder="mail"/>
                 <input type="password" id="pass" placeholder="password"/>
-                <button type="submit" onclick="onclick" id="loginButton">login</button>
-                <p class="message">Not registered? <a href="">Create an account</a></p>
+                <button onclick="onclick" id="loginButton"> login </button>
+                <p class="message">Not registered? <a href="/registration">Create an account</a></p>
             </form>
             </div>
         </div>
-
         <script>
-            document.getElementById("loginButton").onclick(function(e){
-                e.preventDefault();
-                fetch('/login', {
-                    method: 'GET', 
-                    body : JSON.stringify({
-                        'mail' : document.getElementById("mail").value,
-                        'password' : document.getElementById("pass").value
-                    }),
-                    headers: {
-                        'Accept' : 'application/json',
-                        'Content-Type': 'application/json'
-                    } 
-                })
-                .then(function(response){
-                    return response.json(); 
+            const button = document.getElementById('loginButton');
+            button.onclick = function(e){
+            e.preventDefault(); 
+            const mail = document.getElementById('mail').value;
+            const password = document.getElementById('pass').value;
+            fetch('/login', {
+                method : 'POST', 
+                body : JSON.stringify({
+                    'mail' : mail,
+                    'password' : password
+                }),
+                headers: {
+                    'Content-Type' : 'application/json'
                 }
-                .then(function(jsonResponse){
-                    if(jsonResponse.success == true)
-                        window.location("shop.html")
-                })
-                );
-            }) 
+            }).then(function(response){
+                return response.json()
+            }).then(function(jsonResponse){
+                console.log(jsonResponse);
+                if(jsonResponse.success == true)
+                {
+                    alert("You have successfully logged!")
+                    sessionStorage.setItem('currentUser', jsonResponse.mail); 
+                    window.location.href = '/shop'; 
+                }
+            })
+            };
         </script>
-        
     </body>
 </html>
