--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,19 +1,79 @@
 <html>
-    <style>
-        body {
-            background: #e2b09f; 
-            background: -webkit-linear-gradient(right, #e2b09f, #e2b09f);
-            background: -moz-linear-gradient(right, #e2b09f, #e2b09f);
-            background: -o-linear-gradient(right, #e2b09f, #e2b09f);
-            background: linear-gradient(to left, #e2b09f, #e2b09f);
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;      
-            }
-    </style>
-    <body>
-        <title> Salando - Your favorite shop! </title>
+<style>
+    @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-    </body>
-    <script>
-    </script>
+    .container {
+        position: relative;
+        z-index: 3;
+        max-width: 500px;
+        margin: 0 auto;
+        background-color: #FFFFFF;
+    }
+
+    .container .info {
+        margin: 50px auto;
+        text-align: center;
+    }
+    .container .productButton {
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        outline: 0;
+        background: #E9967A;
+        width: 50%;
+        border: 0;
+        padding: 10px;
+        color: #FFFFFF;
+        font-size: 10px;
+        -webkit-transition: all 0.3 ease;
+        transition: all 0.3 ease;
+        cursor: pointer;
+    }
+
+    .container .productButton:hover {
+        background:linear-gradient(to bottom, #493933 5%, #493933 100%);
+	    background-color:#493933;
+    }
+
+    ..container .productButton:active {
+        position: relative;
+        top: 1px;
+    }
+
+    body {
+        background: #e2b09f;
+        background: -webkit-linear-gradient(right, #e2b09f, #e2b09f);
+        background: -moz-linear-gradient(right, #efbaa8, #efbaa8);
+        background: -o-linear-gradient(right, #e2b09f, #e2b09f);
+        background: linear-gradient(to left, #efbaa8, #efbaa8);
+        font-family: "Roboto", sans-serif;
+        color: #16110f;
+        letter-spacing: 1px;
+        font-weight: 550;
+        text-shadow: -2px 2px 15px #FFDAB9;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
+</style>
+
+<head>
+    <title> Salando - Your favorite shop! </title>
+</head>
+
+<body>
+    <div class="container">
+        <ul id="products">
+            {% for p in data %}
+            <div class="container">
+            <li> {{ p.name }} </li>
+            <button class="productButton" data-id={{p.id}}> add to cart </button>
+            </div>
+            {% endfor %}
+        </ul>
+    
+</body>
+<script>
+
+
+</script>
+
 </html>
