--- a/templates/shop.html
+++ b/templates/shop.html
@@ -2,12 +2,28 @@
 <style>
     @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+
+    .parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 56px;
+    justify-content: space-evenly;
+    }
+
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 1 / 3 / 2 / 4; }
+    .div4 { grid-area: 2 / 1 / 3 / 4; }
+
     .container {
         position: relative;
         z-index: 3;
         max-width: 500px;
         margin: 0 auto;
         background-color: #FFFFFF;
+        padding: 2%;
     }
 
     .container .info {
@@ -19,7 +35,7 @@
         text-transform: uppercase;
         outline: 0;
         background: #E9967A;
-        width: 50%;
+        width: 30%;
         border: 0;
         padding: 10px;
         color: #FFFFFF;
@@ -34,7 +50,7 @@
 	    background-color:#493933;
     }
 
-    ..container .productButton:active {
+    .container .productButton:active {
         position: relative;
         top: 1px;
     }
@@ -60,15 +76,35 @@
 </head>
 
 <body>
-    <div class="container">
-        <ul id="products">
-            {% for p in data %}
+
+    <div class="parent">
+        <div class="div1"> 
             <div class="container">
-            <li> {{ p.name }} </li>
-            <button class="productButton" data-id={{p.id}}> add to cart </button>
-            </div>
-            {% endfor %}
-        </ul>
+                I'm the third column
+            </div> 
+        </div>
+        
+        <div class="div2"> 
+            <div class="container">
+            <ul id="products">
+                {% for p in data %}
+                    {{ p.name }}
+                <button class="productButton" data-id={{p.id}}> add to cart </button>
+                {% endfor %}
+            </ul> 
+        </div>
+    </div>
+
+        <div class="div3"> <div class="container">
+            I'm td column
+        </div>  </div>
+        <div class="div4"> 
+            <div class="container">
+                beh
+            </div>  </div>
+        </div>
+
+    
     
 </body>
 <script>
