--- a/templates/magazine.html
+++ b/templates/magazine.html
@@ -2,6 +2,158 @@
 <style>
     @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+    .hidden{
+        display: none;
+    }
+
+    .top-nav-bar {
+        background: #ffffff;
+        height: 57px;
+        top: 0;
+        position: sticky;
+        margin-bottom: 20px;
+        border-top: 3px solid #E9967A;
+        border-left: 3px solid #E9967A;
+    }
+
+    .left-nav-bar {
+        background: #ffffff;
+        width: 20%;
+        height: 70%;
+        left: 0;
+        position: sticky;
+        margin-bottom: 20px;
+        border-bottom: 3px solid #E9967A;
+        border-left: 3px solid #E9967A;
+    }
+
+    
+
+    .side-menu {
+        height: 80%;
+        width: 15%;
+        float: left;
+        z-index: 2;
+        background-color: white;
+        border-left: 3px solid #E9967A;
+        border-bottom: 3px solid #E9967A;
+
+    }
+
+    .titleText {
+        font-family: "Roboto", sans-serif;
+        letter-spacing: 1px;
+        font-weight: 550;
+        text-shadow: -2px 2px 15px #FFDAB9;
+        font-size: medium;
+        float: left;
+        padding: 5px;
+    }
+
+    .productButton {
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        outline: 0;
+        background: #E9967A;
+        width: 100px;
+        border: 0;
+        padding: 5px;
+        color: #FFFFFF;
+        font-size: 10px;
+        -webkit-transition: all 0.3 ease;
+        transition: all 0.3 ease;
+        margin-bottom: 10px;
+        cursor: pointer;
+
+    }
+
+    .catButton {
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        outline: 0;
+        background: #E9967A;
+        width: 70%;
+        border: 0;
+        padding: 20px;
+        color: #FFFFFF;
+        font-size: 10px;
+        -webkit-transition: all 0.3 ease;
+        transition: all 0.3 ease;
+        margin-bottom: 10px;
+        cursor: pointer;
+    }
+
+    .productButton:hover {
+        background: linear-gradient(to bottom, #493933 5%, #493933 100%);
+        background-color: #493933;
+    }
+
+    .catButton:hover {
+        background: linear-gradient(to bottom, #493933 5%, #493933 100%);
+        background-color: #493933;
+    }
+
+    .productButton:active {
+        position: relative;
+        top: 1px;
+    }
+
+    .catButton:active {
+        position: relative;
+        top: 1px;
+    }
+
+    .products {
+        position: sticky;
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center; 
+    }
+
+     .container{
+        width:191px !important; width /**/:200px;
+        height:180px !important; height /**/: 130px;
+        display: flex;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center; 
+        background-color: #fdf1ed;
+        margin: 15px;
+        border: 1px solid #d5a696; 
+        border-radius: 5px;
+        text-align: center;
+        font-family: "Roboto", sans-serif;
+        text-transform: uppercase;
+        font-size: 20px;
+        box-shadow: 8px 5px 7px 5px rgba(0, 0, 0, 0.14);
+
+    }
+    
+    .section-products{
+        overflow: scroll;
+        background: #ffffff;
+        width: 80%;
+        height: 80%;
+        right: 0;
+        position: sticky;
+        margin-bottom: 20px;
+        border-bottom: 3px solid #E9967A;
+        border-right: 3px solid #E9967A;
+        float: right;
+        z-index: 3; 
+        word-break: keep-all;   
+    }
+
+    .descriptionProduct{
+        font-size: 10px;
+        background-color: white;
+        width: 100%;
+        height: 30%;
+    }
+
     body {
         background: #e2b09f;
         background: -webkit-linear-gradient(right, #e2b09f, #e2b09f);
@@ -16,10 +168,69 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
+
+    @media only screen and (max-width: 980px) {
+        .top-nav-bar {
+            height: 108px;
+            border-bottom: 0;
+        }
+
+        .side-menu {
+
+            width: 100px;
+        }
+        .catButton{
+            height: 20px;
+            width: 20px;
+        }
+    }
 </style>
 
-<body>
+<head>
+    <title> Salando </title>
+</head>
 
+<body>
+    <div class="top-nav-bar">
+        <h1 class="titleText"> Management page </h1>    
+    </div>
+    <section class="header">
+        <div class="side-menu">
+            <ul style="list-style:none;">
+                <li><button class="catButton"> All the products</button> </li>
+                <li><button class="catButton"> TF-IDF</button> </li>
+                <li><button class="catButton"> Clustering </button> </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="section-products">
+        <div class="products">
+                {% for d in data %}
+                <div class="container">
+                    {{d.name}}
+                        <div class="descriptionProduct">
+                            {{d.description}}
+                            <div class="quantityProduct">
+                                <button class="productButton" title="add to cart">add to cart</button>
+                            </div>
+                        </div>   
+                </div>
+                {% endfor %}
+        </div>
+    </section>
 </body>
+
+
+
+
+
+
+
+
+<script>
+
+
+</script>
 
 </html>
