--- a/templates/shop.html
+++ b/templates/shop.html
@@ -273,13 +273,14 @@
     <section class="header">
         <div class="side-menu">
             <ul style="list-style:none;">
-                <li><button class="catButton"> clothes</button> </li>
-                <li><button class="catButton"> games</button> </li>
-                <li><button class="catButton"> shoes</button> </li>
-                <li><button class="catButton"> forniture</button> </li>
-                <li><button class="catButton"> make up</button> </li>
-                <li><button class="catButton"> gardening</button> </li>
-                <li><button class="catButton"> electronics</button> </li>
+                <li><button class="catButton" data-id=0 onclick="location.href='/shop';"> All </li>
+                <li><button class="catButton" data-id=1 onclick="location.href='/shop/1';"> clothes</button> </li>
+                <li><button class="catButton" data-id=2 onclick="location.href='/shop/2';"> games</button> </li>
+                <li><button class="catButton" data-id=3 onclick="location.href='/shop/3';"> shoes</button> </li>
+                <li><button class="catButton" data-id=4 onclick="location.href='/shop/4';"> forniture</button> </li>
+                <li><button class="catButton" data-id=5 onclick="location.href='/shop/5';"> make up</button> </li>
+                <li><button class="catButton" data-id=6 onclick="location.href='/shop/6';"> gardening</button> </li>
+                <li><button class="catButton" data-id=7 onclick="location.href='/shop/7';"> electronics</button> </li>
             </ul>
         </div>
     </section>
