--- a/templates/magazine.html
+++ b/templates/magazine.html
@@ -2,7 +2,7 @@
 <style>
     @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-    .hidden{
+    .hidden {
         display: none;
     }
 
@@ -27,7 +27,7 @@
         border-left: 3px solid #E9967A;
     }
 
-    
+
 
     .side-menu {
         height: 80%;
@@ -109,20 +109,26 @@
         justify-content: flex-start;
         flex-wrap: wrap;
         flex-direction: row;
-        align-items: center; 
+        align-items: center;
     }
 
-     .container{
-        width:191px !important; width /**/:200px;
-        height:180px !important; height /**/: 130px;
+    .container {
+        width: 191px !important;
+        width
+        /**/
+        : 200px;
+        height: 180px !important;
+        height
+        /**/
+        : 130px;
         display: flex;
         justify-content: flex-end;
         flex-wrap: wrap;
         flex-direction: column;
-        align-items: center; 
+        align-items: center;
         background-color: #fdf1ed;
         margin: 15px;
-        border: 1px solid #d5a696; 
+        border: 1px solid #d5a696;
         border-radius: 5px;
         text-align: center;
         font-family: "Roboto", sans-serif;
@@ -131,8 +137,8 @@
         box-shadow: 8px 5px 7px 5px rgba(0, 0, 0, 0.14);
 
     }
-    
-    .section-products{
+
+    .section-products {
         overflow: scroll;
         background: #ffffff;
         width: 80%;
@@ -143,15 +149,15 @@
         border-bottom: 3px solid #E9967A;
         border-right: 3px solid #E9967A;
         float: right;
-        z-index: 3; 
-        word-break: keep-all;   
+        z-index: 3;
+        word-break: keep-all;
     }
 
-    .descriptionProduct{
+    .descriptionProduct {
         font-size: 10px;
         background-color: white;
         width: 100%;
-        height: 30%;
+        height: 60%;
     }
 
     body {
@@ -179,10 +185,27 @@
 
             width: 100px;
         }
-        .catButton{
+
+        .catButton {
             height: 20px;
             width: 20px;
         }
+
+        .modalDescription {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: white;
+            padding: 1rem 1.5rem;
+            width: 24rem;
+            border: 1px solid #493933;
+            color: white;
+            text-shadow: none;
+            color: #493933;
+        }
+
+        
     }
 </style>
 
@@ -192,7 +215,7 @@
 
 <body>
     <div class="top-nav-bar">
-        <h1 class="titleText"> Management page </h1>    
+        <h1 class="titleText"> Management page </h1>
     </div>
     <section class="header">
         <div class="side-menu">
@@ -206,31 +229,26 @@
 
     <section class="section-products">
         <div class="products">
-                {% for d in data %}
-                <div class="container">
-                    {{d.name}}
-                        <div class="descriptionProduct">
-                            {{d.description}}
-                            <div class="quantityProduct">
-                                <button class="productButton" title="add to cart">add to cart</button>
-                            </div>
-                        </div>   
+            {% for d in data %}
+            <div class="container">
+                {{d.name}}
+                <div class="descriptionProduct">
+                    {{d.description}}
+                    <div class="quantityProduct">
+                        <button class="productButton" title="cD" data-id=1>change description</button>
+                        <button class="productButton" title="cQ" data-id=2>change quantity</button>
+                    </div>
                 </div>
-                {% endfor %}
+            </div>
+            {% endfor %}
+        </div>
+        <div class="modalDescription">
+
         </div>
     </section>
 </body>
 
 
-
-
-
-
-
-
-<script>
-
-
-</script>
+<script src="{{url_for('static', filename='magazine.js')}}"></script>
 
 </html>
