--- a/templates/magazine.html
+++ b/templates/magazine.html
@@ -113,14 +113,14 @@
     }
 
     .container {
-        width: 191px !important;
+        width: 250px !important;
         width
         /**/
-        : 200px;
-        height: 180px !important;
+        : 250px;
+        height: 240px !important;
         height
         /**/
-        : 130px;
+        : 240px;
         display: flex;
         justify-content: flex-end;
         flex-wrap: wrap;
@@ -133,7 +133,7 @@
         text-align: center;
         font-family: "Roboto", sans-serif;
         text-transform: uppercase;
-        font-size: 20px;
+        font-size: 22px;
         box-shadow: 8px 5px 7px 5px rgba(0, 0, 0, 0.14);
 
     }
@@ -154,10 +154,23 @@
     }
 
     .descriptionProduct {
-        font-size: 10px;
+        font-size: 15px;
         background-color: white;
         width: 100%;
         height: 60%;
+    }
+
+
+    .formProduct{
+        font-family: "Roboto", sans-serif;
+        outline: 0;
+        background: #f2f2f2;
+        width: 100%;
+        border: 0;
+        margin: 0 0 15px;
+        padding: 15px;
+        box-sizing: border-box;
+        font-size: 14px;
     }
 
     body {
@@ -233,17 +246,15 @@
             <div class="container">
                 {{d.name}}
                 <div class="descriptionProduct">
-                    {{d.description}}
-                    <div class="quantityProduct">
-                        <button class="productButton" title="cD" data-id=1>change description</button>
-                        <button class="productButton" title="cQ" data-id=2>change quantity</button>
-                    </div>
+                    {{d.description}} --  {{d.quantity}}
+                    <form class="formProduct" >
+                        <input type="description" class="description" id="desc" placeholder="Change description" />
+                        <input type="number" id="quant" class="quantityNumber" value="0" min=0 max=100 placeholder="Change Quantity" />
+                        <button class="productButton" onclick="onclick" data-id="{{d.idproduct}}"> Modify</button>
+                    </form>
                 </div>
             </div>
             {% endfor %}
-        </div>
-        <div class="modalDescription">
-
         </div>
     </section>
 </body>
