--- a/templates/profile.html
+++ b/templates/profile.html
@@ -30,7 +30,7 @@
         z-index: 3;
         height: 70px; 
         bottom: 0%;
-        left: 0%;
+        right: 0%; 
     }
         body {
         background: #e2b09f;
