--- a/templates/magazine.html
+++ b/templates/magazine.html
@@ -309,9 +309,8 @@
         <div class="side-menu">
             <ul style="list-style:none;">
                 <li><button class="catButton" data-id=0 id="addP"> Add new product</button></li>
-                <li><button class="catButton" data-id=1 > All the products</button> </li>
+                <li><button class="catButton" data-id=1 onclick="location.href='/magazine';"> All the products</button> </li>
                 <li><button class="catButton" data-id=2 id="tfidf" > TF-IDF</button> </li>
-                <li><button class="catButton" data-id=3> Clustering </button> </li>
             </ul>
         </div>
     </section>
