--- a/templates/shop.html
+++ b/templates/shop.html
@@ -293,7 +293,7 @@
                 <div class="descriptionProduct">
                     {{d.description}} 
                     <div class="quantityProduct">
-                        <button class="productButton" data-idproduct="{{d.idproduct}}" data-idname="{{d.name}}" title="add to cart">add to cart</button>
+                        <button class="productButton" data-idproduct="{{d.idproduct}}" data-idname="{{d.name}}" data-stock="{{d.quantity}}" title="add to cart">add to cart</button>
                         <div class="modal" >
                             <div class="modal-content"  >
                                 <span class="close-button">&times;</span>
